--- a/client/views/partials/reports/dashboard.html
+++ b/client/views/partials/reports/dashboard.html
@@ -74,20 +74,20 @@
                     <p>From All Vehicles</p>
                 </div>
             </div>
-            <ul class="col-xs-12 list-inline" ng-class="{'costactivated':activated==='6'}">
-                <li>{{totals.expiring.fitnessExpiryCount}}
+            <ul class="col-xs-12 list-inline exp-trucks" ng-class="{'costactivated':activated==='6'}">
+                <li><a href="#">{{totals.expiring.fitnessExpiryCount}}</a>
                     <small>Fitness</small>
                 </li>
-                <li>{{totals.expiring.permitExpiryCount}}
+                <li><a href="#">{{totals.expiring.permitExpiryCount}}</a>
                     <small>Permit</small>
                 </li>
-                <li>{{totals.expiring.taxExpiryCount}}
+                <li><a href="#">{{totals.expiring.taxExpiryCount}}</a>
                     <small>Tax</small>
                 </li>
-                <li>{{totals.expiring.insuranceExpiryCount}}
+                <li><a href="#">{{totals.expiring.insuranceExpiryCount}}</a>
                     <small>Insurance</small>
                 </li>
-                <li>{{totals.expiring.pollutionExpiryCount}}
+                <li><a href="#">{{totals.expiring.pollutionExpiryCount}}</a>
                     <small>Pollutions</small>
                 </li>
             </ul>
