--- a/client/views/templates/amountByPartyId.html
+++ b/client/views/templates/amountByPartyId.html
@@ -1,6 +1,6 @@
 
 <div class="main-temp col-xs-12 mt-20">
-    <h3>Payments - {{partyName}}</h3>
+    <h3 class="db-title">Payments - {{partyName}}:</h3>
     <table class="table table-bordered table-striped table-condensed table-hover" ng-table="partyParams">
         <tr ng-repeat="amountListByPartyId in results" style="text-align: center;">
 
