--- a/client/views/templates/revenueByvehicleId.html
+++ b/client/views/templates/revenueByvehicleId.html
@@ -1,5 +1,5 @@
 <div class="main-temp col-xs-12 mt-20">
-    <h3>Revenue - {{vehicleNumber}}</h3>
+    <h3 class="db-title">Revenue - {{vehicleNumber}}:</h3>
 
     <table class="table table-bordered table-striped table-condensed table-hover" ng-table="revenueParams">
         <tr ng-repeat="revenueListbyId in revenueByVehicleId" style="text-align: center;">
