--- a/client/views/partials/forgotPassword.html
+++ b/client/views/partials/forgotPassword.html
@@ -3,7 +3,7 @@
     <div ng-controller="LoginCtrl" class="clo-xs-8 col-xs-push-2">
         <form class="login-form mt-10" ng-submit="logIn()">
             <div class="logo-login">
-                <h1>Forgot Password?</h1>
+                <h1 class="fg-pass">Forgot Password?</h1>
             </div>
             <div class="mt-10">
 
@@ -35,10 +35,12 @@
             <div class="col-xs-12">
 
 
-                    <div class="col-xs-12 form-group">
-                        <input type="password" class="form-control custom-form-control"
-                               id="otp" placeholder="OTP">
+                    <div class="col-xs-12 form-group pos-relative">
+                        <span class="bot-arrow"><i class="fa fa-check-square" aria-hidden="true"></i></span>
+                        <input type="password" class="form-control custom-form-control" id="otp" placeholder="OTP">
+                        <div class="resend-otp"><a href="#">Resend OTP</a></div>
                     </div>
+
 
             </div>
 
