--- a/client/views/partials/login.html
+++ b/client/views/partials/login.html
@@ -44,9 +44,17 @@
             </div>
             <div class="col-xs-12">
                 <div class="col-xs-12">
-                    <div class="remember">
-                        <label><input type="checkbox" name="remember"> Remember Me</label>
-                    </div>
+
+                        <div class="remember">
+                            <div class="checkbox">
+                                <label>
+                                    <input type="checkbox" value="">
+                                    <span class="cr ntfns"><i class="cr-icon ntfns-icon fa fa-check"></i></span>
+                                    Remember me
+                                </label>
+                            </div>
+                        </div>
+
                     <div class="forgot">
                         <a href="#" ui-sref="forgotPassword">Forgot Password</a>
                     </div>
