--- a/client/views/templates/expenseByVehicleId.html
+++ b/client/views/templates/expenseByVehicleId.html
@@ -1,6 +1,6 @@
 
 <div class="main-temp col-xs-12 mt-20">
-    <h3>Expense - {{vehicleNumber}}</h3>
+    <h3 class="db-title">Expense - {{vehicleNumber}}:</h3>
     <table class="table table-bordered table-striped table-condensed table-hover" ng-table="expenseParams">
         <tr ng-repeat="listOfExpensesByVehicleId in expensesByVehicleId" style="text-align: center;">
             <td data-title="'Date'" sortable="'regNumber'" class="clickable-item col-sm-2">
