shares reports via email

--- a/client/views/templates/expenseByVehicle.html
+++ b/client/views/templates/expenseByVehicle.html
@@ -31,7 +31,7 @@
             </ul>
             <ul class="list-inline mailDownload">
                 <li>
-                    <button type="button" class="btn mailImage"><img src="images/Reports_Mail.png"></button>
+                    <button type="button" ng-click="shareExpensesDetailsViaEmail();" class="btn mailImage"><img src="images/Reports_Mail.png"></button>
                 </li>
 
                 <li>
