--- a/client/views/index.html
+++ b/client/views/index.html
@@ -15,6 +15,7 @@
     <link rel="stylesheet" type="text/css" href="css/slick.css">
     <link rel="stylesheet" type="text/css" href="css/slick-theme.css">
     <link rel="stylesheet" href="js/lib/bundles/ng-table.css">
+    <link rel="stylesheet" href="components/sweetalert2/dist/sweetalert2.min.css">
 </head>
 
 <body ng-app="EasyGaadi" ng-cloak>
@@ -114,7 +115,7 @@
 <script src="components/underscore/underscore-min.js"></script>
 <script src="components/angular-ui-notification/dist/angular-ui-notification.js"></script>
 <script src="http://maps.google.com/maps/api/js?key=AIzaSyC3JuGIZkNVnzrOthyMWEWf3zA0J-aui0M"></script>
-
+<script src="components/sweetalert2/dist/sweetalert2.all.min.js"></script>
 <!--app-->
 <script src="js/app.js"></script>
 
