--- a/client/views/templates/amountByParties.html
+++ b/client/views/templates/amountByParties.html
@@ -33,7 +33,7 @@
             </ul>
             <ul class="list-inline mailDownload">
                 <li>
-                    <button type="button" class="btn mailImage"><img src="images/Reports_Mail.png"></button>
+                    <button type="button" ng-click="sharePaymentsDetailsByPartyViaEmail();"  class="btn mailImage"><img src="images/Reports_Mail.png"></button>
                 </li>
 
                 <li>
