--- a/client/views/templates/revenueByVehicle.html
+++ b/client/views/templates/revenueByVehicle.html
@@ -32,7 +32,7 @@
             </ul>
             <ul class="list-inline mailDownload">
                 <li>
-                    <button type="button" class="btn mailImage"><img src="images/Reports_Mail.png"></button>
+                    <button type="button" ng-click="shareRevenueDetailsByVechicleViaEmail()" class="btn mailImage"><img src="images/Reports_Mail.png"></button>
                 </li>
 
                 <li>
