--- a/client/views/partials/expenses/expensesEdit.html
+++ b/client/views/partials/expenses/expensesEdit.html
@@ -22,15 +22,7 @@
                         <div ng-show="noTrucks">
                             <i class="glyphicon glyphicon-remove red"></i>
                             <span class="red"> No Results Found </span>
-                        </div>
-                        <div class="form-group col-xs-12">
-                            <div class="col-xs-12 col-sm-6">
-                                <input ng-model="expenseDetails.mode" type="radio"  id="Credit" value="Credit">Credit
-                            </div>
-                            <div class="col-xs-12 col-sm-6">
-                                <input ng-model="expenseDetails.mode" type="radio"  id="Cash" value="Cash">Cash
-                            </div>
-                        </div>
+                        </div>                        
                     </div>
                 </div>
                 <div class="form-group col-xs-12">
@@ -66,14 +58,15 @@
                         <ul class="list-inline">
                             <li class="radio">
                                 <label>
-                                    <input type="radio" name="radio">
+                                    <input ng-model="expenseDetails.mode" type="radio"  id="Credit" value="Credit">
                                     <span class="cr"><i class="rad-icon fa fa-circle"></i></i></span>
                                     Credit
                                 </label>
                             </li>
                             <li class="radio">
                                 <label>
-                                    <input type="radio" name="radio">
+                                <input ng-model="expenseDetails.mode" type="radio"  id="Cash" value="Cash">
+                                <input type="radio" name="radio">
                                     <span class="cr"><i class="rad-icon fa fa-circle"></i></span>
                                     Cash
                                 </label>
