added http loader

--- a/client/css/styles.css
+++ b/client/css/styles.css
@@ -1783,3 +1783,21 @@ select {
 
 }
 
+.loader{
+    padding: 10px;
+    border-radius: 4px;
+   height: 100%;
+   width: 100%;
+   background-color: rgba(0, 0, 0, 0.48);
+    margin-bottom: 10px;
+    position: fixed;
+    z-index: 999; 
+    margin: 0 auto;   
+    display: block;
+
+}
+.loader img{
+    position: relative;
+    top:42%;
+    left: 42%;
+}
