--- a/client/views/partials/forgotPassword.html
+++ b/client/views/partials/forgotPassword.html
@@ -1,23 +1,23 @@
 <div class="login-page">
     <div class="clearfix"></div>
     <div ng-controller="LoginCtrl" class="clo-xs-8 col-xs-push-2">
-        <form class="login-form mt-10" ng-submit="logIn()">
+        <form class="forgot-password mt-10" ng-submit="logIn()">
             <div class="logo-login">
                 <h1 class="fg-pass">Forgot Password?</h1>
             </div>
             <div class="mt-10">
-
                 <div class="form-group col-xs-12">
                     <label for="contactPhone" class="col-xs-12">Mobile Number</label>
                     <div class="col-xs-12">
-                        <input ng-model="loginParams.contactPhone" type="text" class="form-control custom-form-control"
-                               id="contactPhone" placeholder="Mobile">
+                        <input ng-model="loginParams.contactPhone" type="text" class="form-control custom-form-control" id="contactPhone" placeholder="Mobile">
                     </div>
                 </div>
             </div>
 
-
             <div class="col-xs-10 col-xs-push-1">
+                <div class="alert alert-success" role="alert" ng-show="loginParams.success.length">
+                    <p ng-repeat="success in loginParams.success">{{success}}</p>
+                </div>
                 <div class="alert alert-danger" role="alert" ng-show="loginParams.errors.length">
                     <ul>
                         <li ng-repeat="error in loginParams.errors">{{error}}</li>
@@ -25,21 +25,18 @@
                 </div>
             </div>
             <div class="col-xs-12">
-
                 <div class="col-xs-12 sign-in">
-                    <button type="submit" class="sign-in-btn btn-primary btn" ng-click="login()">Submit</button>
+                    <button type="submit" class="sign-in-btn btn" ng-click="forgotPassword()">Submit</button>
                 </div>
 
             </div>
 
             <div class="col-xs-12">
-
-
-                    <div class="col-xs-12 form-group pos-relative">
-                        <span class="bot-arrow"><i class="fa fa-check-square" aria-hidden="true"></i></span>
-                        <input type="password" class="form-control custom-form-control" id="otp" placeholder="OTP">
-                        <div class="resend-otp"><a href="#">Resend OTP</a></div>
-                    </div>
+                <div class="col-xs-12 form-group pos-relative" ng-show="otpFiled">
+                    <span class="bot-arrow"><i class="fa fa-check-square" aria-hidden="true"></i></span>
+                    <input type="password" class="form-control custom-form-control" id="otp" placeholder="OTP">
+                    <div class="resend-otp"><a href="#">Resend OTP</a></div>
+                </div>
 
 
             </div>
