Add API for downloading the report data in to Excel

--- a/client/views/templates/revenueByVehicle.html
+++ b/client/views/templates/revenueByVehicle.html
@@ -36,7 +36,7 @@
                 </li>
 
                 <li>
-                    <button type="button" class="btn mailImage"><img src="images/Reports_Download.png"></button>
+                    <button type="button" ng-click="downloadRevenueDetailsByVechicle();" class="btn mailImage"><img src="images/Reports_Download.png"></button>
                 </li>
             </ul>
         </div>
