--- a/client/views/partials/userProfile/myProfile.html
+++ b/client/views/partials/userProfile/myProfile.html
@@ -1,4 +1,4 @@
-<div class="col-xs-12" ng-controller="LeftNavCtrl">
+<div class="col-xs-12" >
     <div class="col-xs-12">
         <div class="col-xs-12 profile-page">
             <div class="col-xs-11 profile-tabs top-block">
