--- a/client/views/templates/amountByParties.html
+++ b/client/views/templates/amountByParties.html
@@ -37,7 +37,7 @@
                 </li>
 
                 <li>
-                    <button type="button" class="btn mailImage"><img src="images/Reports_Download.png"></button>
+                    <button type="button" ng-click="downloadPaymentDetailsByParty();" class="btn mailImage"><img src="images/Reports_Download.png"></button>
                 </li>
             </ul>
         </div>
