--- a/client/views/templates/expenseByVehicle.html
+++ b/client/views/templates/expenseByVehicle.html
@@ -35,7 +35,7 @@
                 </li>
 
                 <li>
-                    <button type="button" class="btn mailImage"><img src="images/Reports_Download.png"></button>
+                    <button type="button" ng-click="downloadExpenseDetailsByVechicle();" class="btn mailImage"><img src="images/Reports_Download.png"></button>
                 </li>
             </ul>
         </div>
