--- a/client/views/partials/party/edit-party.html
+++ b/client/views/partials/party/edit-party.html
@@ -5,59 +5,61 @@
             <div class="col-xs-12 col-sm-6">
                 <div class="form-group col-xs-12">
                     <div class="col-xs-12">
-                        <input ng-model="party.name" type="text" class="form-control custom-form-control" id="accountId"
-                               placeholder="Party Name*">
+                        <input ng-model="party.name" type="text" class="form-control custom-form-control" id="accountId" placeholder="Party Name*">
                     </div>
                 </div>
                 <div class="form-group col-xs-12">
                     <div class="col-xs-12">
-                        <input ng-model="party.contact" type="number" class="form-control custom-form-control"
-                               id="contactPhone"
-                               placeholder="Contact Phone*">
+                        <input ng-model="party.contact" type="number" class="form-control custom-form-control" id="contactPhone" placeholder="Contact Phone*">
                     </div>
                 </div>
                 <div class="form-group col-xs-12">
                     <div class="col-xs-12">
-                        <input ng-model="party.email" type="email" class="form-control custom-form-control"
-                               id="contactEmail"
-                               placeholder="Email*">
+                        <input ng-model="party.email" type="email" class="form-control custom-form-control" id="contactEmail" placeholder="Email*">
                     </div>
                 </div>
                 <div class="form-group col-xs-12">
                     <div class="col-xs-12">
-                        <input ng-model="party.city" type="text" class="form-control custom-form-control" id="city"
-                               placeholder="City*">
+                        <input ng-model="party.city" type="text" class="form-control custom-form-control" id="city" placeholder="City*">
                     </div>
                 </div>
+                <div class="col-xs-12 pall-zero">
+                        <div class="form-group sms-email col-xs-12">
+                            <div class="sms col-xs-6">
+                                <div class="checkbox">
+                                    <label>
+                                        <input type="checkbox" ng-model="party.isTransporter">
+                                        <span class="cr ntfns">
+                                            <i class="cr-icon ntfns-icon fa fa-check"></i>
+                                        </span>
+                                        Transporter
+                                    </label>
+                                </div>
+                            </div>
+                            <div class="email col-xs-6">
+                                <div class="checkbox">
+                                    <label>
+                                        <input type="checkbox" ng-model="party.isSupplier">
+                                        <span class="cr ntfns">
+                                            <i class="cr-icon ntfns-icon fa fa-check"></i>
+                                        </span>
+                                        Supplier
+                                    </label>
+                                </div>
+                            </div>
+                        </div>
+    
+                    </div>
 
-                <div class="col-xs-12">
-                    <div class="col-xs-12 trip-share">
-                        <ul class="col-xs-12 pall-zero">
-                            <li class="radio col-xs-6 pall-zero">
-                                <label>
-                                    <input ng-model="party.partyType" type="radio" name="partyType" value="isTransporter">
-                                    <span class="cr"><i class="rad-icon fa fa-circle"></i></i></span>
-                                    Transporter
-                                </label>
-                            </li>
-                            <li class="radio col-xs-6">
-                                <label>
-                                   <input  ng-model="party.partyType" type="radio" name="partyType" value="isSupplier">
-                                    <span class="cr"><i class="rad-icon fa fa-circle"></i></span>
-                                    Supplier
-                                </label>
-                            </li>
-                        </ul>
-                    </div>
-                </div>
-     
                 <div class="col-xs-12 pall-zero">
                     <div class="form-group sms-email col-xs-12">
                         <div class="sms col-xs-6">
                             <div class="checkbox">
                                 <label>
-                                    <input type="checkbox"  ng-model="party.isSms">
-                                    <span class="cr ntfns"><i class="cr-icon ntfns-icon fa fa-check"></i></span>
+                                    <input type="checkbox" ng-model="party.isSms">
+                                    <span class="cr ntfns">
+                                        <i class="cr-icon ntfns-icon fa fa-check"></i>
+                                    </span>
                                     SMS Notification
                                 </label>
                             </div>
@@ -65,8 +67,10 @@
                         <div class="email col-xs-6">
                             <div class="checkbox">
                                 <label>
-                                   <input type="checkbox" ng-model="party.isEmail">
-                                    <span class="cr ntfns"><i class="cr-icon ntfns-icon fa fa-check"></i></span>
+                                    <input type="checkbox" ng-model="party.isEmail">
+                                    <span class="cr ntfns">
+                                        <i class="cr-icon ntfns-icon fa fa-check"></i>
+                                    </span>
                                     Email Notification
                                 </label>
                             </div>
@@ -76,10 +80,37 @@
                 </div>
 
             </div>
-            <!--<div class="toolbar-button-div pull-right mb-10">-->
-            <!--<button class="btn btn-blue add-trip-lane" >Add Trip Lanes</button>-->
-            <!--</div>-->
+
             <div class="col-xs-12 col-xs-6">
+                <form class="mt-10">
+                    <div class="col-xs-12 form-group" ng-repeat="tripLane in party.tripLanes track by $index">
+
+                        <div class="mb-0 ">
+                            <div class="col-sm-4 col-xs-12 pl4-pr0">
+                                <input ng-model="tripLane.name" type="text" class="form-control custom-form-control" id="name" placeholder="Trip Lane Name">
+                            </div>
+                            <div class="col-xs-12 col-sm-4 pl4-pr0">
+                                <input ng-model="tripLane.from" type="text" class="form-control custom-form-control" id="from" placeholder="From">
+                            </div>
+                            <div class="col-sm-3 col-xs-12 pl4-pr0">
+                                <input ng-model="tripLane.to" type="text" class="form-control custom-form-control" id="to" placeholder="To">
+                            </div>
+                            <div class="col-sm-1 col-xs-12">
+                                <button class="btn btn-custom btn-default" ng-click="deleteTripLane($index);">
+                                    <i class="fa fa-minus-circle" aria-hidden="true"></i>
+                                </button>
+                            </div>
+                            <div class="clearfix"></div>
+                        </div>
+                    </div>
+
+                </form>
+
+            </div>
+            <div class="toolbar-button-div pull-right mb-10">
+                <button class="btn add-group mt-20" ng-click="addTripLane();">Add Trip Lanes</button>
+            </div>
+            <!--   <div class="col-xs-12 col-xs-6">
                 <div class="form-group col-xs-12">
                     <div class="col-xs-12 pos-relative">
                         <span class="bot-arrow"><i class="fa fa-angle-down" aria-hidden="true"></i></span>
@@ -122,7 +153,7 @@
 
                 </form>
 
-            </div>
+            </div> -->
             <div class="clearfix"></div>
             <div class="col-xs-4 col-xs-push-4">
                 <div class="alert alert-danger" role="alert" ng-show="party.error.length">
@@ -146,4 +177,3 @@
         </form>
     </div>
 </div>
-
