--- a/client/views/partials/trucks/trucks-list.html
+++ b/client/views/partials/trucks/trucks-list.html
@@ -16,7 +16,7 @@
                 </div>
                 <div class="col-sm-4 pall-zero pos-relative">
                     <span class="bot-arrow"><i class="fa fa-angle-down" aria-hidden="true"></i></span>
-                    <select class="form-control">
+                    <select class="form-control" ng-model="truckName" ng-change="searchByTruckName();">
                         <option value="" selected>All Vehicles</option>
                         <option ng-repeat="trucks in currentPageOfTrucks">{{trucks.registrationNo}}</option>
                     </select>
