--- a/client/views/index.html
+++ b/client/views/index.html
@@ -83,7 +83,7 @@
             <div class="col-xs-12">
                 <div class="col-sm-2 col-xs-12 left-nav" ng-if="isLoggedIn()">
                     <left-menu label="Reports" ui-sref="reports"></left-menu>
-                    <left-menu label="Accounts" ng-if="canEditAccounts()"></left-menu>
+                   <!-- <left-menu label="Accounts" ng-if="canEditAccounts()"></left-menu>-->
                     <left-menu label="Trucks" ui-sref="trucks"></left-menu>
                     <left-menu label="Drivers" ui-sref="drivers"></left-menu>
                     <left-menu label="Parties" ui-sref="parties"></left-menu>
@@ -149,5 +149,6 @@
 <script src="js/modules/trackMapModule.js"></script>
 <script src="js/modules/groupMap.js"></script>
 <script src="js/modules/dashBoardModule.js"></script>
+
 </body>
 </html>
