--- a/client/views/partials/forgotPassword.html
+++ b/client/views/partials/forgotPassword.html
@@ -9,7 +9,8 @@
                 <div class="form-group col-xs-12">
                     <label for="contactPhone" class="col-xs-12">Mobile Number</label>
                     <div class="col-xs-12">
-                        <input ng-model="loginParams.contactPhone" type="text" class="form-control custom-form-control" id="contactPhone" placeholder="Mobile">
+                        <input ng-model="loginParams.contactPhone" type="text" class="form-control custom-form-control"
+                               id="contactPhone" placeholder="Mobile">
                     </div>
                 </div>
             </div>
@@ -18,9 +19,9 @@
                 <div class="alert alert-success" role="alert" ng-show="loginParams.success.length">
                     <p ng-repeat="success in loginParams.success">{{success}}</p>
                 </div>
-                <div class="alert alert-danger" role="alert" ng-show="loginParams.errors.length">
+                <div class="alert alert-danger" role="alert" ng-show="loginParams.error.length">
                     <ul>
-                        <li ng-repeat="error in loginParams.errors">{{error}}</li>
+                        <li ng-repeat="error in loginParams.error">{{error}}</li>
                     </ul>
                 </div>
             </div>
@@ -31,11 +32,24 @@
 
             </div>
 
-            <div class="col-xs-12">
-                <div class="col-xs-12 form-group pos-relative" ng-show="otpFiled">
-                    <span class="bot-arrow"><i class="fa fa-check-square" aria-hidden="true"></i></span>
-                    <input type="password" class="form-control custom-form-control" id="otp" placeholder="OTP">
+            <div class="col-xs-12" >
+                <div class="col-xs-12 form-group pos-relative" ng-show="otpField">
+                    <span class="bot-arrow" ng-click="otpValidate()">
+                        <i class="fa fa-check-square" aria-hidden="true"></i></span>
+                    <input type="text" class="form-control custom-form-control" id="otp" placeholder="OTP"
+                           ng-model="otpParams.otp">
                     <div class="resend-otp"><a href="#">Resend OTP</a></div>
+                </div>
+                <div class="clearfix"></div>
+                <div >
+                    <div class="alert alert-success" role="alert" ng-show="otpParams.success.length">
+                        <p ng-repeat="success in otpParams.success">{{success}}</p>
+                    </div>
+                    <div class="alert alert-danger" role="alert" ng-show="otpParams.error.length">
+                        <ul>
+                            <li ng-repeat="error in otpParams.error">{{error}}</li>
+                        </ul>
+                    </div>
                 </div>
 
 
