--- a/client/views/partials/reports/dashboard.html
+++ b/client/views/partials/reports/dashboard.html
@@ -1,3 +1,5 @@
+
+
 <div class="col-xs-12 pall-zero" ng-controller="dashboardController" ng-init="loggedInName();">
     <div class="col-sm-3 col-xs-12">
         <div class="reports-panel" ng-click="vehicleRevenue()" ng-class="{'activated':activated==='0'}">
@@ -33,7 +35,7 @@
 
     <div class="col-sm-3 col-xs-12">
         <div class="reports-panel paymets" ng-click="paymentsReceivable()" ng-class="{'activated':activated==='4'}">
-            <div class="col-xs-12 pall-zero">
+
                 <div class="reports-image">
                     <figure>
                         <img src="images/payments.png">
@@ -45,18 +47,17 @@
                     <small ng-class="{'costactivated':activated==='4'}">
                         <i class="fa fa-inr"></i> {{!totals.pendingDue == true ? 0 :totals.pendingDue}}</small>
                 </div>
-            </div>
 
-            <!--<ul class="col-xs-12 list-inline">
-               &lt;!&ndash; <li class="payble">
-                    <span class="payable">Payable</span><br><a href="#">10000</a>
-                </li>&ndash;&gt;
-                <li class="payble">
-                    <span class="receivable">Receivable</span> <br>
-                    <a href="#">{{!amounts[0].total == true ? 0 :amounts[0].total}}</a>
-                </li>
+            <!--<ul class="col-xs-12 list-inline">-->
+                <!--<li class="payble">-->
+                    <!--<span class="payable">Payable</span><br><a href="#">10000</a>-->
+                <!--</li>-->
+                <!--<li class="payble">-->
+                    <!--<span class="receivable">Receivable</span> <br>-->
+                    <!--<a href="#">{{!amounts[0].total == true ? 0 :amounts[0].total}}</a>-->
+                <!--</li>-->
 
-            </ul>-->
+            <!--</ul>-->
 
         </div>
     </div>
@@ -94,10 +95,6 @@
         </div>
     </div>
 
-    <div class="col-xs-12" ng-include="template">
-    </div>
-
-
-
+    <div class="col-xs-12" ng-include="template"></div>
 </div>
   
