--- a/client/views/partials/userProfile/addingGroup.html
+++ b/client/views/partials/userProfile/addingGroup.html
@@ -12,7 +12,8 @@
                     <div class="col-xs-12 pall-zero">
                         <div class="col-sm-4 col-xs-12">
                             <div class="form-group styling-input-list">
-                                <input type="text" class="form-control custom-form-control" ng-model="groupDetails.name"/>
+                                <input type="text" class="form-control custom-form-control"
+                                       ng-model="groupDetails.name"/>
                                 <label class="focus-effect-for-input" aria-hidden="true">User Name</label>
                             </div>
                             <div class="form-group styling-input-list">
@@ -56,7 +57,8 @@
                             <div class="erp">
                                 <div class="checkbox">
                                     <label>
-                                        <input type="checkbox" value=""><span class="cr"><i class="cr-icon fa fa-check"></i></span>
+                                        <input type="checkbox" value=""><span class="cr"><i
+                                            class="cr-icon fa fa-check"></i></span>
                                         ERP
                                     </label>
                                 </div>
@@ -65,7 +67,8 @@
                             <div class="gps">
                                 <div class="checkbox">
                                     <label>
-                                        <input type="checkbox" value=""><span class="cr"><i class="cr-icon fa fa-check"></i></span>
+                                        <input type="checkbox" value=""><span class="cr"><i
+                                            class="cr-icon fa fa-check"></i></span>
                                         GPS
                                     </label>
                                 </div>
@@ -75,12 +78,10 @@
                     </div>
                     <div class="col-xs-12">
                         <div class="col-xs-4 mtb-25 sub-can">
-                            <button type="submit" class="btn can" >Cancel</button>
+                            <button type="submit" class="btn can">Cancel</button>
                             <button type="submit" class="btn can  last">Submit</button>
                         </div>
                     </div>
-
-
                 </div>
             </div>
         </div>
