--- a/client/views/partials/drivers/driversList.html
+++ b/client/views/partials/drivers/driversList.html
@@ -5,9 +5,9 @@
         <div class="col-xs-8 col-xs-push-1 pall-zero">
             <div class="col-sm-8">
                 <div class="input-group stylish-input-group">
-                    <input type="text" class="form-control" placeholder="Search">
+                    <input type="text" ng-model="driver2"  class="form-control" placeholder="Search">
                     <span class="input-group-addon">
-                        <button type="submit">
+                        <button type="button" ng-click="searchByDriverName(driver2)">
                            <i class="fa fa-search sear" aria-hidden="true"></i>
                         </button>
                     </span>
@@ -15,9 +15,9 @@
             </div>
         <div class="col-sm-4 pall-zero pos-relative">
             <span class="bot-arrow"><i class="fa fa-angle-down" aria-hidden="true"></i></span>
-            <select class="form-control">
-                <option value="" selected>All Vehicle</option>
-                <option ng-repeat="drivers in currentPageOfDrivers ">{{drivers.truckId.registrationNo}}</option>
+            <select class="form-control" ng-model="driver1" ng-change="searchByDriverName(driver1);">
+                <option value="" selected>All Drivers</option>
+                <option ng-repeat="drivers in driversList ">{{drivers.fullName}}</option>
             </select>
         </div>
         </div>
