--- a/client/views/partials/party/party-list.html
+++ b/client/views/partials/party/party-list.html
@@ -4,9 +4,9 @@
         <div class="col-xs-8 col-xs-push-1 pall-zero">
         <div class="col-sm-8">
             <div class="input-group stylish-input-group">
-                <input type="text" class="form-control" placeholder="Search">
+                <input type="text"  ng-model="partyName1"class="form-control" placeholder="Search">
                 <span class="input-group-addon">
-                        <button type="submit">
+                        <button type="button" ng-click="searchByPartyName(partyName1);">
                               <i class="fa fa-search sear" aria-hidden="true"></i>
                         </button>
                     </span>
@@ -14,9 +14,9 @@
         </div>
         <div class="col-sm-4 pall-zero pos-relative">
             <span class="bot-arrow"><i class="fa fa-angle-down" aria-hidden="true"></i></span>
-            <select class="form-control">
-                <option value="" selected>All Vehicles</option>
-                <option ng-repeat="parties in currentPageOfParties">{{parties.name}}</option>
+            <select class="form-control" ng-model="partyName" ng-change="searchByPartyName(partyName);">
+                <option value="" selected>All Parties</option>
+                <option ng-repeat="parties in partiesList">{{parties.name}}</option>
             </select>
         </div>
         </div>
