--- a/client/views/partials/trips/tripsList.html
+++ b/client/views/partials/trips/tripsList.html
@@ -6,9 +6,9 @@
                 <div class="col-xs-8 col-xs-push-1 pall-zero">
                 <div class="col-sm-8">
                     <div class="input-group stylish-input-group">
-                        <input type="text" class="form-control" placeholder="Search">
+                        <input type="text" class="form-control" ng-model="truckNumber1"  placeholder="Search">
                         <span class="input-group-addon">
-                        <button type="submit">
+                        <button type="button" ng-click="searchByVechicleNumber(truckNumber1);">
                                 <i class="fa fa-search sear" aria-hidden="true"></i>
                         </button>
                     </span>
@@ -16,9 +16,9 @@
                 </div>
                 <div class="col-sm-4 pall-zero pos-relative">
                     <span class="bot-arrow"><i class="fa fa-angle-down" aria-hidden="true"></i></span>
-                    <select class="form-control">
+                    <select class="form-control" ng-model="truckNumber" ng-change="searchByVechicleNumber(truckNumber);">
                         <option value="" selected>All Vehicles</option>
-                        <option ng-repeat="trips in currentPageOfTrips">{{trips.attrs.truckName}}</option>
+                        <option ng-repeat="truck in trucksList">{{truck.registrationNo}}</option>
                     </select>
                 </div>
                 </div>
