--- a/client/views/partials/trucks/trucks-list.html
+++ b/client/views/partials/trucks/trucks-list.html
@@ -6,9 +6,9 @@
                 <div class="col-xs-8 col-xs-push-1 pall-zero">
                 <div class="col-sm-8">
                     <div class="input-group stylish-input-group">
-                        <input type="text" class="form-control" placeholder="Search">
+                        <input type="text" ng-model="truckName1" class="form-control" placeholder="Search by truck number">
                         <span class="input-group-addon">
-                        <button type="submit">
+                        <button type="button" ng-click=searchByTruckName(truckName1);>
                            <i class="fa fa-search sear" aria-hidden="true"></i>
                         </button>
                     </span>
@@ -16,9 +16,9 @@
                 </div>
                 <div class="col-sm-4 pall-zero pos-relative">
                     <span class="bot-arrow"><i class="fa fa-angle-down" aria-hidden="true"></i></span>
-                    <select class="form-control" ng-model="truckName" ng-change="searchByTruckName();">
+                    <select class="form-control" ng-model="truckName2" ng-change="searchByTruckName(truckName2);">
                         <option value="" selected>All Vehicles</option>
-                        <option ng-repeat="trucks in currentPageOfTrucks">{{trucks.registrationNo}}</option>
+                        <option ng-repeat="trucks in trucksList">{{trucks.registrationNo}}</option>
                     </select>
                 </div>
                 </div>
