--- a/client/views/partials/expenses/expensesEdit.html
+++ b/client/views/partials/expenses/expensesEdit.html
@@ -5,7 +5,8 @@
             <div class="col-xs-12 col-sm-6">
                 <div class="form-group col-xs-12">
                     <div class="col-xs-12">
-                        <date-picker id="date" ban-future="'banFutureDate'" ng-model="expenseDetails.date" placeholder="'Date*'" class="'custom-form-control'"></date-picker>
+                        <date-picker id="date" ban-future="'banFutureDate'" ng-model="expenseDetails.date"
+                                     placeholder="'Date*'" class="'custom-form-control'"></date-picker>
                     </div>
                 </div>
                 <div class="form-group col-xs-12">
@@ -13,9 +14,12 @@
                         <span class="bot-arrow">
                             <i class="fa fa-angle-down" aria-hidden="true"></i>
                         </span>
-                        <input type="text" ng-model="truckRegNo" uib-typeahead="truck.registrationNo for truck in trucks | filter:$viewValue" class="form-control custom-form-control"
-                            typeahead-min-length="1" typeahead-on-select="selectTruckId($item)" typeahead-select-on-exact="true"
-                            placeholder="Vehicle Number*" typeahead-no-results="noTrucks" autocomplete="false">
+                        <input type="text" ng-model="truckRegNo"
+                               uib-typeahead="truck.registrationNo for truck in trucks | filter:$viewValue"
+                               class="form-control custom-form-control"
+                               typeahead-min-length="1" typeahead-on-select="selectTruckId($item)"
+                               typeahead-select-on-exact="true"
+                               placeholder="Vehicle Number*" typeahead-no-results="noTrucks" autocomplete="false">
                         <div ng-show="noTrucks">
                             <i class="glyphicon glyphicon-remove red"></i>
                             <span class="red"> No Results Found </span>
@@ -29,17 +33,17 @@
                         </span>
                         <select class="form-control custom-form-control" ng-model="expenseDetails.expenseType">
                             <option value="" selected>Select Expense Type*</option>
-
                             <option ng-repeat="e in expenses" value="{{e._id}}">{{e.expenseName}}</option>
                             <option value="others">Others</option>
                         </select>
-
                     </div>
                 </div>
                 <div ng-show="expenseDetails.expenseType=='others'">
                     <div class="form-group col-xs-12">
                         <div class="col-xs-12">
-                            <input type="text" ng-model="expenseDetails.expenseName" class="form-control custom-form-control" id="name" placeholder="Expense Type*">
+                            <input type="text" ng-model="expenseDetails.expenseName"
+                                   class="form-control custom-form-control" id="name" placeholder="Expense Type*">
+
                         </div>
                     </div>
 
@@ -73,19 +77,25 @@
                     </div>
                 </div>
                 <div class="form-group col-xs-12">
-                    <div class="col-xs-12">
-                        <input ng-model="expenseDetails.cost" type="number" class="form-control custom-form-control" id="amount" placeholder="Amount*">
+                    <div class="col-xs-12 styling-input-list">
+                        <input ng-model="expenseDetails.cost" type="number" class="form-control custom-form-control"
+                               id="amount">
+                        <label class="focus-effect-for-input" aria-hidden="true">Amount*</label>
                     </div>
                 </div>
                 <div class="form-group col-xs-12">
-                    <div class="col-xs-12">
-                        <input ng-model="expenseDetails.description" type="text" class="form-control custom-form-control" id="description" placeholder="Remarks">
+                    <div class="col-xs-12 styling-input-list">
+                        <input ng-model="expenseDetails.description" type="text"
+                               class="form-control custom-form-control" id="description" placeholder="Remarks">
+                        <label class="focus-effect-for-input" aria-hidden="true">Description</label>
                     </div>
                 </div>
                 <div class="form-group col-xs-12" ng-if="expenseTitle == 'Other'">
                     <label for="expenseName" class="col-xs-12 col-sm-4 pall-zero">Other Expense</label>
-                    <div class="col-xs-12">
-                        <input ng-model="expenseDetails.expenseName" type="text" class="form-control custom-form-control" id="expenseName" placeholder="Other Expenses">
+                    <div class="col-xs-12 styling-input-list">
+                        <input ng-model="expenseDetails.expenseName" type="text"
+                               class="form-control custom-form-control" id="expenseName">
+                        <label class="focus-effect-for-input" aria-hidden="true">Other Expesne Type*</label>
                     </div>
                 </div>
             </div>
