--- a/client/views/partials/party/edit-party.html
+++ b/client/views/partials/party/edit-party.html
@@ -4,52 +4,62 @@
         <form class="mt-10">
             <div class="col-xs-12 col-sm-6">
                 <div class="form-group col-xs-12">
-                    <div class="col-xs-12">
-                        <input ng-model="party.name" type="text" class="form-control custom-form-control" id="accountId" placeholder="Party Name*">
+                    <div class="col-xs-12 styling-input-list">
+                        <input ng-model="party.name" type="text" class="form-control custom-form-control" id="accountId">
+                        <label class="focus-effect-for-input" aria-hidden="true">Party Name*</label>
+
                     </div>
                 </div>
                 <div class="form-group col-xs-12">
-                    <div class="col-xs-12">
-                        <input ng-model="party.contact" type="number" class="form-control custom-form-control" id="contactPhone" placeholder="Contact Phone*">
+                    <div class="col-xs-12 styling-input-list">
+                        <input ng-model="party.contact" type="number" class="form-control custom-form-control"
+                               id="contactPhone">
+                        <label class="focus-effect-for-input" aria-hidden="true">Contact Phone*</label>
+
                     </div>
                 </div>
                 <div class="form-group col-xs-12">
-                    <div class="col-xs-12">
-                        <input ng-model="party.email" type="email" class="form-control custom-form-control" id="contactEmail" placeholder="Email*">
+                    <div class="col-xs-12 styling-input-list">
+                        <input ng-model="party.email" type="email" class="form-control custom-form-control"
+                               id="contactEmail">
+                        <label class="focus-effect-for-input" aria-hidden="true">Email*</label>
+
                     </div>
                 </div>
                 <div class="form-group col-xs-12">
-                    <div class="col-xs-12">
-                        <input ng-model="party.city" type="text" class="form-control custom-form-control" id="city" placeholder="City*">
+                    <div class="col-xs-12 styling-input-list">
+                        <input ng-model="party.city" type="text" class="form-control custom-form-control" id="city">
+                        <label class="focus-effect-for-input" aria-hidden="true">City*</label>
+
                     </div>
                 </div>
                 <div class="col-xs-12 pall-zero">
-                        <div class="form-group sms-email col-xs-12">
-                            <div class="sms col-xs-6">
-                                <div class="checkbox">
-                                    <label>
-                                        <input type="checkbox" ng-model="party.isTransporter">
-                                        <span class="cr ntfns">
+                    <div class="form-group sms-email col-xs-12">
+                        <div class="sms col-xs-6">
+                            <div class="checkbox">
+                                <label>
+                                    <input type="checkbox" ng-model="party.isTransporter">
+                                    <span class="cr ntfns">
                                             <i class="cr-icon ntfns-icon fa fa-check"></i>
                                         </span>
-                                        Transporter
-                                    </label>
-                                </div>
-                            </div>
-                            <div class="email col-xs-6">
-                                <div class="checkbox">
-                                    <label>
-                                        <input type="checkbox" ng-model="party.isSupplier">
-                                        <span class="cr ntfns">
-                                            <i class="cr-icon ntfns-icon fa fa-check"></i>
-                                        </span>
-                                        Supplier
-                                    </label>
-                                </div>
+                                    Transporter
+                                </label>
                             </div>
                         </div>
-    
+                        <div class="email col-xs-6">
+                            <div class="checkbox">
+                                <label>
+                                    <input type="checkbox" ng-model="party.isSupplier">
+                                    <span class="cr ntfns">
+                                            <i class="cr-icon ntfns-icon fa fa-check"></i>
+                                        </span>
+                                    Supplier
+                                </label>
+                            </div>
+                        </div>
                     </div>
+
+                </div>
 
                 <div class="col-xs-12 pall-zero">
                     <div class="form-group sms-email col-xs-12">
@@ -83,23 +93,33 @@
 
             <div class="col-xs-12 col-xs-6">
                 <form class="mt-10">
-                    <div class="col-xs-12 form-group" ng-repeat="tripLane in party.tripLanes track by $index">
+                    <div class="col-xs-12" ng-repeat="tripLane in party.tripLanes track by $index">
 
                         <div class="mb-0 ">
-                            <div class="col-sm-4 col-xs-12 pl4-pr0">
-                                <input ng-model="tripLane.name" type="text" class="form-control custom-form-control" id="name" placeholder="Trip Lane Name">
+                            <div class="col-xs-10 form-group pl4-pr0 styling-input-list">
+                                <input ng-model="tripLane.name" type="text" class="form-control custom-form-control"
+                                       id="name">
+                                <label class="focus-effect-for-input" aria-hidden="true">Trip Lane Name</label>
+
                             </div>
-                            <div class="col-xs-12 col-sm-4 pl4-pr0">
-                                <input ng-model="tripLane.from" type="text" class="form-control custom-form-control" id="from" placeholder="From">
-                            </div>
-                            <div class="col-sm-3 col-xs-12 pl4-pr0">
-                                <input ng-model="tripLane.to" type="text" class="form-control custom-form-control" id="to" placeholder="To">
-                            </div>
-                            <div class="col-sm-1 col-xs-12">
+                            <div class="col-sm-2 col-xs-12">
                                 <button class="btn btn-custom btn-default" ng-click="deleteTripLane($index);">
                                     <i class="fa fa-minus-circle" aria-hidden="true"></i>
                                 </button>
                             </div>
+                            <div class="col-xs-5 form-group pl4-pr0 styling-input-list">
+                                <input ng-model="tripLane.from" type="text" class="form-control custom-form-control"
+                                       id="from">
+                                <label class="focus-effect-for-input" aria-hidden="true">From</label>
+
+                            </div>
+                            <div class="col-xs-5     pl4-pr0 styling-input-list">
+                                <input ng-model="tripLane.to" type="text" class="form-control custom-form-control"
+                                       id="to">
+                                <label class="focus-effect-for-input" aria-hidden="true">To</label>
+
+                            </div>
+
                             <div class="clearfix"></div>
                         </div>
                     </div>
