--- a/client/views/partials/trips/tripsEdit.html
+++ b/client/views/partials/trips/tripsEdit.html
@@ -83,27 +83,31 @@
 
             <div class="col-sm-6 col-xs-12">
                 <div class="form-group col-xs-12">
-                    <div class="col-xs-12">
+                    <div class="col-xs-12 styling-input-list">
                         <input ng-model="trip.tonnage" type="number" class="form-control custom-form-control"
-                               id="tonnage" placeholder="Tonnage*">
+                               id="tonnage">
+                        <label class="focus-effect-for-input" aria-hidden="true">Tonnage*</label>
                     </div>
                 </div>
                 <div class="form-group col-xs-12">
-                    <div class="col-xs-12">
+                    <div class="col-xs-12 styling-input-list">
                         <input ng-model="trip.rate" type="number" class="form-control custom-form-control"
-                               id="rate" placeholder="Rate*">
+                               id="rate">
+                        <label class="focus-effect-for-input" aria-hidden="true">Rate*</label>
                     </div>
                 </div>
                 <div class="form-group col-xs-12">
-                    <div class="col-xs-12">
+                    <div class="col-xs-12 styling-input-list">
                         <input ng-model="trip.freightAmount" type="number" class="form-control custom-form-control"
-                               id="freightAmount" placeholder="Freight Amount" readonly>
+                               id="freightAmount" readonly>
+                        <label class="focus-effect-for-input" aria-hidden="true">Freight Amount</label>
                     </div>
                 </div>
                 <div class="form-group col-xs-12">
-                    <div class="col-xs-12">
+                    <div class="col-xs-12 styling-input-list">
                         <textarea ng-model="trip.remarks" class="form-control custom-form-control"
-                                  id="remarks" placeholder="Remarks"></textarea>
+                                  id="remarks"></textarea>
+                        <label class="focus-effect-for-input" aria-hidden="true">Remarks*</label>
                     </div>
                 </div>
                 <div class="form-group col-xs-12">
