--- a/client/views/partials/trucks/trucks-edit.html
+++ b/client/views/partials/trucks/trucks-edit.html
@@ -28,16 +28,17 @@
             </div>
 
             <div class="form-group col-xs-12 ">
-
-                <div class="col-xs-12 pos-relative styling-input-list">
-                    <span class="bot-arrow"><i class="fa fa-angle-down" aria-hidden="true"></i></span>
+                <div class="col-xs-12">
                     <input id="city" type="text" ng-model="driverName"
                            uib-typeahead="driver.fullName for driver in drivers | filter:$viewValue"
                            class="form-control custom-form-control" typeahead-min-length="1"
-                           typeahead-on-select="selectDriverId($item)" typeahead-select-on-exact="true"
-                           autocomplete="false">
-                    <label class="focus-effect-for-input" aria-hidden="true">Assign Driver</label>
+                           typeahead-on-select="selectDriverId($item)" typeahead-select-on-exact="true"                                                 typeahead-no-results="noDriver" autocomplete="false" placeholder="Assign Driver">
+                        <div ng-show="noDriver">
+                            <i class="glyphicon glyphicon-remove red"></i>
+                            <span class="red"> No Results Found </span>
+                        </div>
                 </div>
+
             </div>
 
         </div>
