--- a/client/views/partials/userProfile/myProfile.html
+++ b/client/views/partials/userProfile/myProfile.html
@@ -19,40 +19,41 @@
                     <div class="profile-right col-sm-10">
                         <div class="col-sm-6">
                             <div class="form-group form-group-custom">
-                                <div class="col-xs-12">
-                                    <input type="text" name="userName" id="userName" readonly placeholder="User Name" ng-model="account.profile.userName"
-                                           class="form-control custom-form-control"/>
+                                <div class="col-xs-12 styling-input-list">
+                                    <input type="text" name="userName" id="userName" readonly ng-model="account.profile.userName"  class="form-control custom-form-control"/>
+                                    <label class="focus-effect-for-input" aria-hidden="true">User Name</label>
                                 </div>
                                 <div class="clearfix"></div>
                             </div>
 
                             <div class="form-group form-group-custom">
-                                <div class="col-xs-12">
-                                    <input type="text" name="mobile" id="mobile" placeholder="Mobile" ng-model="account.profile.contactPhone"
-                                           class="form-control custom-form-control"/>
+                                <div class="col-xs-12 styling-input-list">
+                                    <input type="text" name="mobile" id="mobile" ng-model="account.profile.contactPhone" class="form-control custom-form-control"/>
+                                    <label class="focus-effect-for-input" aria-hidden="true">Mobile</label>
                                 </div>
                                 <div class="clearfix"></div>
                             </div>
                             <div class="form-group form-group-custom">
-                                <div class="col-xs-12">
-                                    <input type="text" name="email" id="email" placeholder="Email" ng-model="account.profile.email"
+                                <div class="col-xs-12 styling-input-list">
+                                    <input type="text" name="email" id="email" ng-model="account.profile.email"
                                            class="form-control custom-form-control"/>
+                                    <label class="focus-effect-for-input" aria-hidden="true">Email</label>
                                 </div>
                                 <div class="clearfix"></div>
                             </div>
                         </div>
                         <div class="col-sm-6">
                             <div class="form-group form-group-custom">
-                                <div class="col-xs-12">
-                                    <input type="text" name="totalGroups" id="totalGroups" readonly placeholder="Total Groups" ng-model="account.accountGroupsCount"
-                                           class="form-control custom-form-control"/>
+                                <div class="col-xs-12 styling-input-list">
+                                    <input type="text" name="totalGroups" id="totalGroups" readonly ng-model="account.accountGroupsCount" class="form-control custom-form-control"/>
+                                    <label class="focus-effect-for-input" aria-hidden="true">Total Groups</label>
                                 </div>
                                 <div class="clearfix"></div>
                             </div>
                             <div class="form-group form-group-custom">
-                                <div class="col-xs-12">
-                                    <input type="text" name="totalVehicles" id="totalVehicles" readonly placeholder="Total Vehicles" ng-model="account.accountTrucksCount"
-                                           class="form-control custom-form-control"/>
+                                <div class="col-xs-12 styling-input-list">
+                                    <input type="text" name="totalVehicles" id="totalVehicles" readonly ng-model="account.accountTrucksCount" class="form-control custom-form-control"/>
+                                    <label class="focus-effect-for-input" aria-hidden="true">Total Vehicles</label>
                                 </div>
                                 <div class="clearfix"></div>
                             </div>
@@ -62,9 +63,9 @@
                             <h3>Reset Password</h3>
                             <div class="col-xs-12 col-sm-6 pall-zero">
                                 <div class="form-group form-group-custom">
-                                    <div class="col-xs-12">
-                                        <input type="password" name="password" id="oldpassword" placeholder="Old Password" ng-model="account.oldPassword"
-                                               class="form-control custom-form-control"/>
+                                    <div class="col-xs-12 styling-input-list">
+                                        <input type="password" name="password" id="oldpassword" ng-model="account.oldPassword" class="form-control custom-form-control"/>
+                                        <label class="focus-effect-for-input" aria-hidden="true">Old Password</label>
                                     </div>
                                     <div class="clearfix"></div>
                                 </div>
@@ -72,18 +73,18 @@
                             <div class="col-xs-12 pall-zero">
                                 <div class="col-xs-12 col-sm-6 pall-zero">
                                     <div class="form-group form-group-custom">
-                                        <div class="col-xs-12">
-                                            <input type="password" name="retypePassword" id="Password" placeholder="New Password" ng-model="account.newPassword"
-                                                   class="form-control custom-form-control"/>
+                                        <div class="col-xs-12 styling-input-list">
+                                            <input type="password" name="retypePassword" id="Password" ng-model="account.newPassword" class="form-control custom-form-control"/>
+                                            <label class="focus-effect-for-input" aria-hidden="true">New Password</label>
                                         </div>
                                         <div class="clearfix"></div>
                                     </div>
                                 </div>
                                 <div class="col-xs-12 col-sm-6 pall-zero">
                                     <div class="form-group form-group-custom">
-                                        <div class="col-xs-12">
-                                            <input type="password" name="retypePassword" id="retypePassword" placeholder="Confirm Password" ng-model="account.confirmPassword"
-                                                   class="form-control custom-form-control"/>
+                                        <div class="col-xs-12 styling-input-list">
+                                            <input type="password" name="retypePassword" id="retypePassword" ng-model="account.confirmPassword" class="form-control custom-form-control"/>
+                                            <label class="focus-effect-for-input" aria-hidden="true">Confirm Password</label>
                                         </div>
                                         <div class="clearfix"></div>
                                     </div>
