--- a/client/views/templates/revenueByVehicle.html
+++ b/client/views/templates/revenueByVehicle.html
@@ -40,6 +40,7 @@
                 </li>
             </ul>
         </div>
+        <div class="clearfix"></div>
         <div>
             <div class="alert alert-danger" role="alert" ng-show="filters.error.length">
                 <ul>
