--- a/client/views/partials/userProfile/addingGroup.html
+++ b/client/views/partials/userProfile/addingGroup.html
@@ -1,13 +1,15 @@
 <div class="col-xs-12" ng-controller="LeftNavCtrl">
     <div class="col-xs-12">
         <div class="col-xs-12 profile-page">
-            <div class="col-xs-11 profile-tabs top-block">
+
+            <div class="col-xs-11 profile-tabs">
+            <div class="top-block">
                 <ul class="list-inline">
                     <li><a href="#" ui-sref="myProfile">My Profile</a></li>
                     <li><a href="#" ui-sref="myGroup">My Group</a></li>
                     <li><a href="#" ui-sref="addGroup" class="activeProfileTab">Add Group</a></li>
                 </ul>
-
+            </div>
                 <div class="user-form col-xs-12 mt-30" ng-controller="AddEditAccountCtrl">
                     <div class="col-xs-12 pall-zero">
                         <div class="col-sm-4 col-xs-12">
@@ -43,11 +45,21 @@
                                 <input type="text" class="form-control custom-form-control" ng-model="group.location"/>
                                 <label class="focus-effect-for-input" aria-hidden="true">Location</label>
                             </div>
+
                             <div class="form-group">
-                                <div ng-dropdown-multiselect="" extra-settings="dropdownSetting"
-                                     options="trucks" selected-model="group.truckId" checkboxes="true"></div>
+                                <div class="dropdown pall-zero">
+                                    <button class="tl btn dropdown-toggle custom-form-control col-xs-12" type="button" data-toggle="dropdown">Select Truck
+                                        <span class="caret"></span></button>
+                                    <ul class="dropdown-menu assign-trucks list-inline col-xs-12">
+                                        <li ng-repeat="truck in trucks" class="col-xs-5" ng-show="$index<trucks.length/2">
+                                            <input type="checkbox" value="{{truck._id}}" ng-model="truckId2[$index]" ng-click="truckSelected(truckId2[$index],truck._id)">{{truck.registrationNo}}</li>
+                                        <li ng-repeat="truck in trucks" class="col-xs-5" ng-show="$index>trucks.length/2">
+                                            <input type="checkbox" value="{{truck._id}}" ng-model="truckId2[$index]" ng-click="truckSelected(truckId2[$index],truck._id)">{{truck.registrationNo}}</li>
+                                    </ul>
+                                </div>
                             </div>
                         </div>
+
 
                     </div>
                     <div class="col-xs-12 pall-zero">
