--- a/client/views/partials/userProfile/myGroup.html
+++ b/client/views/partials/userProfile/myGroup.html
@@ -1,13 +1,14 @@
 <div class="col-xs-12" ng-controller="LeftNavCtrl">
     <div class="col-xs-12">
         <div class="col-xs-12 profile-page">
-            <div class="col-xs-11 profile-tabs top-block">
+            <div class="col-xs-11 profile-tabs">
+                <div class="top-block">
                 <ul class="list-inline">
                     <li><a href="#" ui-sref="myProfile">My Profile</a></li>
                     <li><a href="#" ui-sref="myGroup" class="activeProfileTab">My Group</a></li>
                     <li><a href="#" ui-sref="addGroup">Add Group</a></li>
                 </ul>
-
+                </div>
                 <div class="main-right col-xs-12" ng-controller="ShowAccountsCtrl">
                     <table class="table table-bordered table-striped table-condensed table-hover mt-20" ng-table="accountGroupParams">
                         <tr ng-repeat="groups in currentPageOfAccountGroup" style="text-align: center;">
@@ -19,7 +20,7 @@
                                 groups.groupName }}
                             </td>
 
-                            <td data-title="'Created By'" sortable="'createdByName'"
+                            <td data-title="'Created By'" sortable="'accountId.userName'"
                                 class="clickable-item col-sm-1">{{ groups.accountId.userName }}
                             </td>
                             <td data-title="'Action'" class="col-sm-2">
