--- a/client/views/partials/party/party-list.html
+++ b/client/views/partials/party/party-list.html
@@ -34,8 +34,11 @@
             <td data-title="'Email'" sortable="'email'" class="clickable-item col-sm-2">{{
                 parties.email }}
             </td>
-            <td data-title="'City'" sortable="'city'" class="clickable-item col-sm-2">{{
+            <td data-title="'City'" sortable="'city'" class="clickable-item col-sm-1">{{
                 parties.city }}
+            </td>
+            <td data-title="'Party Type'" sortable="'partyType'" class="clickable-item col-sm-1">{{
+                parties.partyType }}
             </td>
             <td data-title="'Triplanes'" sortable="'tripLanes'" class="clickable-item col-sm-1">{{
                 parties.tripLanes.length }}
