--- a/client/views/partials/userProfile/addingGroup.html
+++ b/client/views/partials/userProfile/addingGroup.html
@@ -1,12 +1,14 @@
 <div class="col-xs-12" ng-controller="LeftNavCtrl">
     <div class="col-xs-12">
         <div class="col-xs-12 profile-page">
-            <div class="col-xs-11 profile-tabs top-block">
+            <div class="col-xs-11 profile-tabs">
+                <div class="top-block">
                 <ul class="list-inline">
                     <li><a href="#" ui-sref="myProfile">My Profile</a></li>
                     <li><a href="#" ui-sref="myGroup">My Group</a></li>
                     <li><a href="#" ui-sref="addGroup" class="activeProfileTab">Add Group</a></li>
                 </ul>
+                </div>
 
                 <div class="user-form col-xs-12 mt-30" ng-controller="groupEditController">
                     <div class="col-xs-12 pall-zero">
