--- a/client/views/partials/expenses/expensesEdit.html
+++ b/client/views/partials/expenses/expensesEdit.html
@@ -75,8 +75,8 @@
                         </ul>
                     </div>
                 </div>
-
-                <div class="form-group col-xs-12" ng-show="expenseDetails.mode == 'Credit'">
+                <div ng-show="expenseDetails.mode == 'Credit'">
+                <div class="form-group col-xs-12">
                     <div class="col-xs-12">
                         <input type="text" ng-model="partyName"
                                uib-typeahead="party.name for party in partyBySupplier | filter:$viewValue"
@@ -86,9 +86,24 @@
                                typeahead-no-results="noParty" autocomplete="false" placeholder="Party Name*">
                     </div>
                 </div>
+                    <div class="form-group col-xs-12">
+                        <div class="col-xs-12 styling-input-list">
+                        <input type="number" class="form-control custom-form-control" ng-model="expenseDetails.totalAmount"/>
+                            <label class="focus-effect-for-input" aria-hidden="true">Total Amount*</label>
+
+                        </div>
+                    </div>
+                    <div class="form-group col-xs-12">
+                        <div class="col-xs-12 styling-input-list">
+                            <input type="number" class="form-control custom-form-control" ng-model="expenseDetails.paidAmount"/>
+                            <label class="focus-effect-for-input" aria-hidden="true">Paid Amount*</label>
+
+                        </div>
+                    </div>
+                </div>
 
 
-                <div class="form-group col-xs-12">
+                <div class="form-group col-xs-12" ng-show="expenseDetails.mode == 'Cash'">
                     <div class="col-xs-12 styling-input-list">
                         <input ng-model="expenseDetails.cost" type="number" class="form-control custom-form-control"
                                id="amount">
